--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <p id = "thwomp">Thwomp!</p>
 <p id="log"></p>
 <div id = "box"></div>
-<script src = "script.js"/>
+<script src = "script.js"></script>
 </body>
 </html>
